experiment/eks/cpu/models/webhook-mlserver-with-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocifit-k8s-deployment
  labels:
    app: ocifit-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocifit-k8s
  template:
    metadata:
      labels:
        app: ocifit-k8s
    spec:
      serviceAccountName: ocifit-k8s-sa
      nodeSelector:
        node.kubernetes.io/instance-type: t3.2xlarge
      containers:
      - name: ml-server
        image: ghcr.io/converged-computing/aws-performance-study:model-server
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: mlserver-api        
      - name: ocifit-webhook
        image: ghcr.io/compspec/ocifit-k8s:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-tls
        volumeMounts:
        - name: webhook-certs
          mountPath: /etc/webhook/certs
          readOnly: true
        - name: static-features-cache
          mountPath: /etc/features-cache
          readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          secretName: ocifit-k8s-tls # Matches the Certificate's secretName
      - name: static-features-cache
        configMap:
          name: node-features
---
apiVersion: v1
kind: Service
metadata:
  name: ocifit-k8s-svc
spec:
  selector:
    app: ocifit-k8s
  ports:
    - port: 443
      targetPort: webhook-tls
---
# 3. The MutatingWebhookConfiguration with auto-injection
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: oci-image-selector-webhook
  annotations:
    # cert-manager will see this and inject the CA from the 'ocifit-k8s-cert' Certificate
    cert-manager.io/inject-ca-from: default/ocifit-k8s-cert
webhooks:
- name: oci.image.compatibilities.selection
  clientConfig:
    # cert-manager will fill caBundle.
    service:
      name: ocifit-k8s-svc
      namespace: default
      path: "/mutate"
      port: 443
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  - operations: [ "CREATE" ]
    apiGroups: ["flux-framework.org"]
    apiVersions: ["v1alpha2"]
    resources: ["miniclusters"]
  sideEffects: None
  admissionReviewVersions: ["v1"]
